syntax = "proto3";
package hyfco.conf;

option go_package = "hyfco/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Trace trace = 1;
  Server server = 2;
  Data data = 3;
  Logger logger = 4;
  Registry registry = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message MySQL {
    string DSN = 2;
    google.protobuf.Duration max_life_time = 3;
    int32 max_conns = 4;
    int32 max_idle_conns = 5;
    google.protobuf.Duration timeout =6;
    google.protobuf.Duration read_timeout = 7;
    google.protobuf.Duration write_timeout = 8;
    bool debug = 9;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  MySQL mySql= 1;
  Redis redis = 2;
}

message Trace {
  string endpoint = 1;
}


message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

message Logger{
  repeated string output_paths = 1;
  string level = 2;
  int64 max_size = 3;
  int64 max_age = 4;
  int64 max_backup = 5;
  string format = 6;
}